# ha-smartgardn

./: .gitignore  AUDIT_REPORT.md  CALCULATION_VERIFICATION_REPORT.md  CHANGELOG.md  CODE_ANALYSIS.md  CONTRIBUTING.md  HACS_SUBMISSION.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART_CARDS.md  README.md  REFACTORING_PLAN.md  RELEASE_0.2.0_SUMMARY.md  RELEASE_NOTES_CARDS.md  TESTING_CARDS.md  THIRD_PARTY_LICENSES.md  create_release.py  hacs.json  info.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/hooks/: pre-commit
.github/workflows/: release.yml  tests.yml
_notes/: PULL_REQUEST_GUIDE.md  PUSH_INSTRUCTIONS.md  QUICK_COMMANDS.sh  SMARTGRDN_AUDIT_REPORT.txt
custom_components/irrigation_et0/: __init__.py  _pyeto_vendor.py  binary_sensor.py  button.py  cards.py  config_flow.py  const.py  (+15 more)
docs/: CARDS_SETUP.md  DEPLOYMENT.md  HACS_PUBLISH_READINESS.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_CARDS_TEST.md  NO_RESTART_UPDATES.md  QUICK_START.md  RESTART_VERIFICATION_CHECKLIST.md
scripts/: setup_hooks.py  sync_cards.py  test_cards_live.py
tests/: conftest.py  test_card_registration.py  test_config_flow.py  test_coordinator.py  test_coordinator_logic.py  test_diagnostics.py  test_entities.py  test_et0_calculator.py  test_et0_module.py  test_gts_calculator.py  test_lovelace_cards.py  test_migration.py  test_pyeto_vendor.py  test_reliability.py  test_repairs.py  test_services.py  test_storage.py  test_storage_migration.py  test_unload_reload_cycle.py  test_water_balance.py  test_weather_module.py
(+49 files in other folders)
