[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "irrigation-et0"
version = "0.2.1"
description = "Home Assistant custom component for ET₀-based smart irrigation scheduling"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
# No runtime dependencies — this runs inside Home Assistant

[dependency-groups]
dev = [
  # Core HA test harness (pulls in homeassistant itself as a transitive dep)
  "pytest-homeassistant-custom-component>=0.13.0",
  # Test utilities
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "freezegun>=1.4",
  # Linting & typing
  "ruff>=0.4",
  "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["custom_components"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
source = ["custom_components.smartgardn_et0"]
branch = true

[tool.coverage.report]
show_missing = true
